[package]
name = "acid2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = {version = "0.8.5", optional = true}
rand_distr = {version = "0.4.3", optional = true}

[features]
default = ["rand"]
rand = ["dep:rand", "dep:rand_distr"]

[dev-dependencies]
criterion = "0.3"

[profile.release-with-debug]
inherits = "release"
debug = true
