[package]
name = "acid2"
version = "0.2.0"
authors = ["Matthew Cramerus <suremarc.pm@gmail.com>"]
edition = "2021"
resolver = "2"
description = "2-adic double-precision floating-point implementation"
documentation = "https://docs.rs/acid2"
readme = "README.md"
homepage = "https://github.com/suremarc/acid2"
repository = "https://github.com/suremarc/acid2"
license = "MIT OR Apache-2.0"
keywords = ["math", "modular", "float", "padic", "number"]
categories = ["mathematics", "no-std"]

[dependencies]
libm = "0.2"
rand = {version = "0.8.5", optional = true}
rand_distr = {version = "0.4.3", optional = true}

[features]
default = []
rand = ["dep:rand", "dep:rand_distr"]
simd = []

[dev-dependencies]
criterion = "0.3"
# This is an ugly hack to include certain features in tests & benchmarks. 
# See here: https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481
acid2 = { path = ".", features = ["rand", "simd"] }

[[bench]]
name = "arithmetic"
harness = false

[package.metadata.docs.rs]
features = ["rand", "simd"]
all-features = true
